Fixed bug #37376 (fastcgi.c compile fail with gcc 2.95.4).